# rust_strings

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  lint.yml  rustfmt.yml  test.yml
src/: lib.rs  splits.rs
tests/: count_chars.rs  palindrome.rs  reverse.rs
